修改少部分

--- a/template/index.html
+++ b/template/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>文本搜索系统---胡祀鹏设计制作</title>
+    <title>uart命令执行系统---胡祀鹏设计制作</title>
     <link href="../static/css/css.css" type="text/css" rel="stylesheet" />
     <script src="../static/jQuery/jquery-2.2.3.min.js" type="text/javascript"></script>
     <script src="../static/js/js.js" type="text/javascript"></script>
